# notcleandreamer

./: .gitignore  Dockerfile  Makefile  README.md  cpu.Dockerfile  dreamer_atari.py  dreamer_crafter.py  dreamer_lunarlander.py  dreamer_pogema.py  pyproject.toml  requirements.txt  requirements_gym.txt  setup.py
configs/: atari.yaml  lunarlander.yaml  pogema.yaml
noncleandreamer/: ac.py  custom_types.py  distributions.py  dreamer.py  modules.py  networks.py  ppo.py  rssm.py
