[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['noncleandreamer*']

[project]
name = "DreamerV3"
readme = "README.md"
requires-python =">=3.10"
authors = []
version = "0.0.1"
dynamic = ["dependencies", "optional-dependencies"]

